@@ -1,3 +1,7 @@
+2002-04-23  James Henstridge  <james@daa.com.au>
+
+	* gtk/gtk-types.c: remove old commented out GdkGC implementation.
+
 2002-04-22  James Henstridge  <james@daa.com.au>
 
 	* gtk/Makefile.am (EXTRA_DIST): same here.
